# bootcamp_project_jira_cli

./: Cargo.toml  README.md
data/: db.json
src/: db.rs  io_utils.rs  main.rs  models.rs  navigator.rs  ui.rs
src/ui/: pages.rs  prompts.rs
src/ui/pages/: page_helpers.rs
