[package]
name = "cli_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clearscreen = "2.0.0"
ellipse = "0.2.0"
itertools = "0.10.5"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"

[dev-dependencies]
tempfile = "3.3.0"
